@@ -18,7 +18,7 @@
                 <thead>
                     <tr class="caption">
                         <th class="tbl_col_server_id" scope="col"><tmpl_var name="server_id_txt"></th>
-                        <th class="tbl_col_client_id" scope="col"><tmpl_var name="client_id_txt"></th>
+                        <th class="tbl_col_client_pid" scope="col"><tmpl_var name="client_id_txt"></th>
                         <th class="tbl_col_ip_type" scope="col"><tmpl_var name="ip_type_txt"></th>
                         <th class="tbl_col_ip_address" scope="col"><tmpl_var name="ip_address_txt"></th>
                         <th class="tbl_col_virtualhost" scope="col"><tmpl_var name="virtualhost_txt"></th>
@@ -27,7 +27,7 @@
                     </tr>
                     <tr class="filter">
                         <td class="tbl_col_server_id"><select name="search_server_id">{tmpl_var name='search_server_id'}</select></td>
-                        <td class="tbl_col_client_id"><select name="search_client_id">{tmpl_var name='search_client_id'}</select></td>
+                        <td class="tbl_col_client_pid"><select name="search_client_id">{tmpl_var name='search_client_id'}</select></td>
                         <td class="tbl_col_ip_type"><select name="search_ip_type">{tmpl_var name='search_ip_type'}</select></td>
                         <td class="tbl_col_ip_address"><input type="text" name="search_ip_address" value="{tmpl_var name='search_ip_address'}" /></td>
                         <td class="tbl_col_virtualhost"><select name="search_virtualhost">{tmpl_var name='search_virtualhost'}</select></td>
@@ -41,7 +41,7 @@
                     <tmpl_loop name="records">
                         <tr class="tbl_row_<tmpl_if name='__EVEN__'}even<tmpl_else>uneven</tmpl_if>">
                             <td class="tbl_col_server_id"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="server_id"}</a></td>
-                            <td class="tbl_col_client_id"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="client_id"}</a></td>
+                            <td class="tbl_col_client_pid"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="client_id"}</a></td>
                             <td class="tbl_col_ip_type"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="ip_type"}</a></td>
                             <td class="tbl_col_ip_address"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="ip_address"}</a></td>
                             <td class="tbl_col_virtualhost"><a href="#" onClick="loadContent('admin/server_ip_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="virtualhost"}</a></td>
