@@ -18,7 +18,7 @@
             <table class="list">
                 <thead>
                     <tr class="caption">
-                        <th class="tbl_col_client_id" scope="col"><tmpl_var name="client_id_txt"></th>
+                        <th class="tbl_col_client_pid" scope="col"><tmpl_var name="client_id_txt"></th>
                         <th class="tbl_col_company_name" scope="col"><tmpl_var name="company_name_txt"></th>
                         <th class="tbl_col_contact_name" scope="col"><tmpl_var name="contact_name_txt"></th>
                         <th class="tbl_col_username" scope="col"><tmpl_var name="username_txt"></th>
@@ -27,12 +27,12 @@
                         <th class="tbl_col_limit" scope="col">{tmpl_var name='search_limit'}</th>
                     </tr>
                     <tr class="filter">
-                        <td class="tbl_col_client_id"><input type="text" name="search_client_id" value="{tmpl_var name='search_client_id'}" /></td>
+                        <td class="tbl_col_client_pid"><input type="text" name="search_client_id" value="{tmpl_var name='search_client_id'}" /></td>
                         <td class="tbl_col_company_name"><input type="text" name="search_company_name" value="{tmpl_var name='search_company_name'}" /></td>
                         <td class="tbl_col_contact_name"><input type="text" name="search_contact_name" value="{tmpl_var name='search_contact_name'}" /></td>
                         <td class="tbl_col_username"><input type="text" name="search_username" value="{tmpl_var name='search_username'}" /></td>
                         <td class="tbl_col_city"><input type="text" name="search_city" value="{tmpl_var name='search_city'}" /></td>
-                        <td class="tbl_col_country"><select name="search_country">{tmpl_var name='search_country'}</select>/td>
+                        <td class="tbl_col_country"><select name="search_country">{tmpl_var name='search_country'}</select></td>
                         <td class="tbl_col_buttons">
                             <button type="button" class="button icons16 icoFilter" name="Filter" id="Filter" value="{tmpl_var name="filter_txt"}" onClick="submitForm('pageForm','client/client_list.php');"><span>{tmpl_var name="filter_txt"}</span></button>
                         </td>
@@ -41,12 +41,12 @@
                 <tbody>
                     <tmpl_loop name="records">
                         <tr class="tbl_row_<tmpl_if name='__EVEN__'}even<tmpl_else>uneven</tmpl_if>">
-                            <td class="tbl_col_client_id"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="client_id"}</a></td>
+                            <td class="tbl_col_client_pid"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="client_id"}</a></td>
                             <td class="tbl_col_company_name"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="company_name"}</a></td>
                             <td class="tbl_col_contact_name"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="contact_name"}</a></td>
                             <td class="tbl_col_username"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="username"}</a></td>
                             <td class="tbl_col_city"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="city"}</a></td>
-                            <td class="tbl_col_country"><a href="#" onClick="loadContent('client/client_edit.php?id={tmpl_var name='id'}');">{tmpl_var name="country"}</a></td>
+                            <td class="tbl_col_country"><div class="country-{tmpl_var name="country"}"><span>{tmpl_var name="country"}</span></div></td>
                             <td class="tbl_col_buttons">
                                 <tmpl_if name="is_admin">
                                     <a class="button icons16 icoLoginAs" href="javascript: loadContent('admin/login_as.php?id={tmpl_var name='id'}');"><span>{tmpl_var name='login_as_txt'}</span></a>
